02_code1/grade.txt
Grading at Sun Jul 19 20:04:16 UTC 2020
Checking code1.c for legal syntax
temp.c: In function ‘main’:
temp.c:14:10: error: missing terminating " character [-Werror]
   printf("max(0x451215AF, 0x913591AF) is %d\n
          ^
temp.c:14:3: error: missing terminating " character
   printf("max(0x451215AF, 0x913591AF) is %d\n
   ^
temp.c:15:1: error: missing terminating " character [-Werror]
 ", max(0x451215AF, 0x913591AF));
 ^
temp.c:15:1: error: missing terminating " character
temp.c:18:3: error: expected expression before ‘return’
   return 0;
   ^
temp.c:19:1: error: expected ‘;’ before ‘}’ token
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
